# demo

./: .gitignore  pyproject.toml  requirements.txt
apps/corecode/: forms.py  middleware.py  models.py  signals.py  urls.py  views.py
apps/corecode/migrations/: 0005_auto_20231011_1827.py  0006_auto_20231011_1912.py  0007_participant_access_coupons.py  0008_remove_participant_access_coupons.py  0009_auto_20231011_2114.py  0010_auto_20231012_0827.py
apps/corecode/templates/corecode/: access_coupon_list.html  coupon_type_list.html  event_list.html  mgt_form.html  participant_detail.html  participant_list.html  participant_type_list.html  participants_upload.html
school_app/: settings.py  urls.py
templates/: base.html
templates/registration/: login.html
