[tool.poetry]
name = "qrevents"
version = "0.1.0"
description = ""
authors = ["malik <mlanlokun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2.17"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}
gunicorn = "^21.2.0"
typing-extensions = "^4.8.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
